# S47-Slackware-0226-RustAndAngular-Hostify

conceptKlarity/: AngularFeature.md  LLD.md  ProjectPlanner.md  README.md  documentation.md
conceptKlarity/angular/: README_AUTH.md  README_MODULAR.md  README_PERF.md  app-routing.module.ts  app.component.css  app.component.html  app.component.ts  app.module.ts  dashboard.component.css  dashboard.component.html  dashboard.component.ts  demo-cli.component.css  demo-cli.component.html  demo-cli.component.spec.ts  demo-cli.component.ts  details.component.ts  home.component.ts  login.component.css  login.component.html  login.component.ts  package-lock.json  package.json  product-card.component.css  product-card.component.html  product-card.component.ts  product-list.component.html  product-list.component.ts  product.service.ts  reactive-form.component.css  reactive-form.component.html  (+12 more)
conceptKlarity/backend/: Cargo.toml  README.md
conceptKlarity/backend/migrations/: 20260403_create_products_table.down.sql  20260403_create_products_table.up.sql
conceptKlarity/backend/src/: main.rs
conceptKlarity/rust-backend/: Cargo.toml  Dockerfile  PR.md
conceptKlarity/rust-backend/migrations/: 0001_create_products.sql
conceptKlarity/rust-backend/src/: main.rs  state.rs
conceptKlarity/rust-backend/src/config/: mod.rs
conceptKlarity/rust-backend/src/handlers/: items.rs  products.rs
conceptKlarity/rust-backend/src/middleware/: auth.rs
conceptKlarity/rust-backend/src/models/: product.rs
conceptKlarity/rust-backend/src/routes/: items.rs  mod.rs  products.rs
(+19 files in other folders)
