[package]
name = "klarity-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
tower-http = { version = "0.3", features = ["cors"] }
