[package]
name = "rust_backend_mvp"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"
log = "0.4"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "migrate"] }
anyhow = "1.0"
actix-cors = "0.6"
jsonwebtoken = "8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
